--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/spring-security-core-4.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-security-oauth2-2.0.12.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-security-web-4.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.40-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
